# decomp

./: .gitignore  9498test.c  README.md  architectures.py  block_graph.py  build_map.py  convert_c.py  decomp_project.py  decompile.py  disassemble.py  function_signatures.py  generate_asm.py  instruction_buffer.py  instructions.py  liveness.py  loop_tracker.py  project_state.py  pyproject.toml  reduce_c.py  simplify_c.py  t4.c  test.py
docs/: ARCHITECTURES.md  REDESIGN.md  VIM_WORKFLOW.md
examples/legacy/: README.md  test.map
examples/legacy/scratch/: 1479c.c.bak  1479c_c.c  1479c_l.c  1479c_s.c  1479c_s2.c  14d14.c.bak  14d14_c.c  14d14_test_out.c  9498.c.bak  (+4 more)
scratch/: 14d14_l.c  14d14_s.c  14d14_test.c  14d14l.c  14d14simp.c  9498.c  9498_c.c  d630.c  d630.c.bak  d630_l.c  d630_s.c  temp.c
src/decomp/: __init__.py  architectures.py  block_graph.py  cli.py  convert_c.py  disassemble.py  function_discovery.py  function_signatures.py  generate_asm.py  instruction_buffer.py  instructions.py  legacy_adapter.py  legacy_instruction.py  legacy_types.py  liveness.py  loop_tracker.py  meta_blocks.py  parity.py  project_cli.py  project_state.py  reduce_c.py  render_asm.py  render_c.py  structure.py
tests/: test_architectures.py  test_arm_thumb_control_flow.py  test_block_graph.py  test_core_models.py  test_function_collection.py  test_function_discovery.py  test_function_signatures.py  test_instruction_fixes.py  test_legacy_instruction.py  test_loop_tracker.py  test_meta_blocks.py  test_parity.py  test_project_state.py  test_register_effects.py  test_render_asm.py  test_render_c.py  test_type_annotations.py
tests/fixtures/: dd2_1_0_manifest.json  dd2_1_0_parity_max10.json
(+22 files in other folders)
