[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decomp-thumb"
version = "0.1.0"
description = "Personal ARM Thumb decompilation toolchain for Cortex-M firmware."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycparser>=2.21",
]

[project.scripts]
decomp-thumb = "decompile:main"
decomp-project = "decomp_project:main"

[tool.setuptools]
py-modules = [
    "block_graph",
    "build_map",
    "convert_c",
    "architectures",
    "decomp_project",
    "decompile",
    "disassemble",
    "function_signatures",
    "generate_asm",
    "instruction_buffer",
    "instructions",
    "liveness",
    "loop_tracker",
    "make_map",
    "project_state",
    "reduce_c",
]
