[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decomp-firmware"
version = "0.1.0"
description = "Firmware decompilation and reverse-engineering utilities for older embedded targets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycparser>=2.21",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Disassemblers",
]

[project.scripts]
decomp = "decomp.cli:main"
decomp-thumb = "decomp.cli:main"
decomp-project = "decomp.project_cli:main"
decomp-parity = "decomp.parity:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
decomp = ["py.typed"]
